--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.15.3"
   }
 }
